--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+*.sqlite
 
 # Flask stuff:
 instance/
@@ -159,3 +160,6 @@ cython_debug/
 
 test.*
 test/
+
+hmm.sh 
+bfg-1.14.0.jar 
